# aXe_c_code

./: .gitignore  Makefile.in  Makefile.linux  Makefile.solaris  README  README.md  config.h  config.h.in  configure  configure.ac
src/: Makefile.am  aXe_AF2PET.c  aXe_BE.c  aXe_CHECK.c  aXe_DIRIMAGE.c  aXe_DRZ2PET.c  aXe_DRZPREP.c  aXe_FILET.c  aXe_FILET2.c  aXe_FRIGEN.c  aXe_FRINGECORR.c  aXe_GOL2AF.c  aXe_GPS.c  aXe_INTPIXCORR.c  aXe_NICBACK.c  aXe_PET2SPC.c  aXe_PETCONT.c  aXe_PETFF.c  aXe_PETIPC.c  aXe_SCALEBCK.c  aXe_SEX2GOL.c  aXe_STAMPS.c  aXe_TEST.c  aXe_TFIT.c  aXe_errors.c  aXe_errors.h  aXe_grism.h  aXe_utils.c  aXe_utils.h  aper_check.c  aper_check.h  aper_conf.c  aper_conf.h  crossdisp_utils.c  crossdisp_utils.h  dirimage_model.c  dirimage_model.h  disp_conf.c  disp_conf.h  drizzle_utils.c  (+71 more)
